<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/very_dark_grey">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/cirka"
        android:textSize="40sp"
        android:textStyle="bold"/>
    <ImageView
        android:id="@+id/ivSpam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/image_2"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tvEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textColor="@color/white"
        android:fontFamily="@font/gilroy_extra_bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@id/ivSpam"
        android:textSize="20sp"
        android:layout_marginTop="40dp"/>
    
    <EditText
        android:id="@+id/etEmailAddressLogin"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="45dp"
        android:hint="@string/email_address"
        app:layout_constraintTop_toBottomOf="@id/tvEmailAddress"
        android:background="@drawable/edittext"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="45dp"
        android:textColorHint="#494949"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        android:fontFamily="@font/gilroy_extra_bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@id/etEmailAddressLogin"
        android:textSize="20sp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/etPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@drawable/edittext"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:textColorHint="#494949"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPasswordLogin"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:padding="5dp"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="#909090"
            android:padding="5dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:clickable="true"
            android:padding="5dp"
            android:focusable="true"/>

    </LinearLayout>
    <Button
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log in"
        android:backgroundTint="@color/rectangle_10_color"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:textSize="24sp"
        android:fontFamily="@font/gilroy_extra_bold"
        android:textColor="@color/very_dark_grey"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>